k8s/blog/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: blog
spec:
  ports:
  - port: 3306
  selector:
    app: mysql
  type: LoadBalancer
