k8s/blog/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-ingress
  namespace: blog
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /blog(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: blog-service
                port:
                  number: 80
    - http:
        paths:
          - path:  /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: blog-api
                port:
                  number: 80
